force-app/main/default/objects/Wiki_Page__c/Wiki_Page__c.object-meta.xml
<CustomObject>
    <description>The wiki page object.</description>
    <label>Wiki Page</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>