force-app/main/default/objects/Wiki_Page__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the wiki page.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>