force-app/main/default/objects/Wiki_Page__c/fields/Parent_Page__c.field-meta.xml
<CustomField>
    <fullName>Parent_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent wiki page for the wiki page.</description>
    <label>Parent Page</label>
    <referenceTo>Wiki_Page__c</referenceTo>
    <relationshipLabel>Wiki Pages</relationshipLabel>
    <relationshipName>Wiki_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>