force-app/main/default/objects/Wiki_Page__c/fields/Wiki_Space__c.field-meta.xml
<CustomField>
    <fullName>Wiki_Space__c</fullName>
    <description>The wiki space to which the wiki page belongs.</description>
    <label>Wiki Space</label>
    <referenceTo>Wiki_Space__c</referenceTo>
    <relationshipLabel>Wiki Pages</relationshipLabel>
    <relationshipName>Wiki_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>